reformat class file