@@ -1,5 +1,6 @@
 package net.ritasister.wgrp.rslibs.api;
 
+import com.google.inject.Inject;
 import net.ritasister.wgrp.WorldGuardRegionProtect;
 import net.ritasister.wgrp.rslibs.permissions.UtilPermissions;
 import net.ritasister.wgrp.util.config.Message;
@@ -15,28 +16,27 @@ import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
+/**
+ * A class that contains methods about rights, notification and other
+ */
 public class RSApi {
 
-	private final WorldGuardRegionProtect wgRegionProtect;
-
-	public RSApi(WorldGuardRegionProtect worldGuardRegionProtect) {
-		this.wgRegionProtect =worldGuardRegionProtect;
-	}
+	@Inject
+	private WorldGuardRegionProtect wgRegionProtect;
 
 	/**
 	 * Check if a sender has permissions for commands.
 	 *
-	 * @param sender  Who send this command.
-	 * @param cmd     Name command.
-	 * @param perm    Permission to check.
-	 * @param message return custom message for sender.
-	 * @return if Sender can use commands.
+	 * @param sender Who send this command.
+	 * @param cmd Name command.
+	 * @param perm Permission to check.
+	 * @param message Return custom message for a sender.
+	 * @return If Sender can use commands.
 	 */
 	public boolean isSenderCommandsPermission(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull UtilPermissions perm, String message) {
 		if (!sender.hasPermission(perm.getPermissionName())) {
 			if (message != null) {
-				sender.sendMessage(wgRegionProtect.getChatApi().getColorCode(message));
-
+				sender.sendMessage(message);
 			}
 			return true;
 		}
@@ -44,19 +44,18 @@ public class RSApi {
 	}
 
 	/**
-	 * Check if a sender has permissions for commands.
+	 * Check if a Player has permissions for commands.
 	 *
-	 * @param player  Who send this command.
-	 * @param cmd     Name command.
-	 * @param perm    Permission to check.
-	 * @param message return custom message for sender.
-	 * @return if Sender can use commands.
+	 * @param player Who send this command.
+	 * @param cmd Name command.
+	 * @param perm Permission to check.
+	 * @param message Return custom message for a Player.
+	 * @return If sender can use commands.
 	 */
 	public boolean isSenderCommandsPermission(@NotNull Player player, @NotNull Command cmd, @NotNull UtilPermissions perm, String message) {
 		if (!player.hasPermission(perm.getPermissionName())) {
 			if (message != null) {
-				player.sendMessage(wgRegionProtect.getChatApi().getColorCode(message));
-
+				player.sendMessage(message);
 			}
 			return true;
 		}
@@ -67,8 +66,8 @@ public class RSApi {
 	 * Check if a sender has permission for use TAB.
 	 *
 	 * @param sender Who send this command.
-	 * @param perm   Permission to check.
-	 * @return if Sender can use TAB.
+	 * @param perm Permission to check.
+	 * @return If sender can use TAB.
 	 */
 	public boolean isSenderCommandsPermissionOnTab(@NotNull CommandSender sender, @NotNull UtilPermissions perm) {
 		return sender.hasPermission(perm.getPermissionName());
@@ -77,15 +76,15 @@ public class RSApi {
 	/**
 	 * Check if a sender has permission for use Listener.
 	 *
-	 * @param sender  Who send this command.
-	 * @param perm    Permission to check.
-	 * @param message return custom message for sender.
-	 * @return if Sender can use Events.
+	 * @param sender Who send this command.
+	 * @param perm Permission to check.
+	 * @param message Return custom message for a sender.
+	 * @return If sender can use Events.
 	 */
 	public boolean isSenderListenerPermission(@NotNull CommandSender sender, @NotNull UtilPermissions perm, String message) {
 		if (!sender.hasPermission(perm.getPermissionName())) {
 			if (message != null) {
-				sender.sendMessage(wgRegionProtect.getChatApi().getColorCode(message));
+				sender.sendMessage(message);
 			}
 			return false;
 		}
@@ -97,13 +96,13 @@ public class RSApi {
 	 *
 	 * @param player  Who send this command.
 	 * @param perm    Permission to check.
-	 * @param message return custom message for sender.
-	 * @return if Sender can use Events.
+	 * @param message Return custom message for a player.
+	 * @return If Player can use event method.
 	 */
 	public boolean isSenderListenerPermission(@NotNull Player player, @NotNull UtilPermissions perm, String message) {
 		if (!player.hasPermission(perm.getPermissionName())) {
 			if (message != null) {
-				player.sendMessage(wgRegionProtect.getChatApi().getColorCode(message));
+				player.sendMessage(message);
 			}
 			return false;
 		}
@@ -113,15 +112,15 @@ public class RSApi {
 	/**
 	 * Check if an entity has permission for use Listener.
 	 *
-	 * @param entity  Who send this command.
-	 * @param perm    Permission to check.
-	 * @param message return custom message for sender.
-	 * @return if Sender can use Events.
+	 * @param entity who send this command.
+	 * @param perm permission to check.
+	 * @param message Return custom message for an entity.
+	 * @return If entity can use event method.
 	 */
 	public boolean isSenderListenerPermission(@NotNull Entity entity, @NotNull UtilPermissions perm, String message) {
 		if (entity.hasPermission(perm.getPermissionName())) {
 			if (message != null) {
-				entity.sendMessage(wgRegionProtect.getChatApi().getColorCode(message));
+				entity.sendMessage(message);
 			}
 			return false;
 		}
@@ -131,10 +130,10 @@ public class RSApi {
 	/**
 	 * Send notification to admin.
 	 *
-	 * @param player        return player object.
-	 * @param playerName    return nickname player.
-	 * @param senderCommand return name command if player attempt to use in region.
-	 * @param regionName    return region name, if player attempts to use command in region.
+	 * @param player Player object.
+	 * @param playerName Nickname player.
+	 * @param senderCommand Name command if Player attempt to use in a region.
+	 * @param regionName The region name, if Player attempts to use command in a region.
 	 */
 	public void notify(Player player, String playerName, String senderCommand, String regionName) {
 		if(regionName == null) return;
@@ -156,9 +155,9 @@ public class RSApi {
 	/**
 	 * Send notify to admin.
 	 *
-	 * @param playerName player object.
-	 * @param senderCommand name command if player attempt to use in region.
-	 * @param regionName region name, if player attempts to use command in region.
+	 * @param playerName Player object.
+	 * @param senderCommand Name command if Player attempt to use in a region.
+	 * @param regionName Region name, if Player attempts to use command in a region.
 	 */
 	public void notify(String playerName, String senderCommand, String regionName) {
 		if(regionName == null) return;
@@ -175,20 +174,20 @@ public class RSApi {
 	}
 
 	/**
-	 * Send notification if player attempts to interact with region from WorldGuard.
+	 * Send a notification to the administrator if Player attempts to interact with a region from WorldGuard.
 	 *
-	 * @param admin message for admin who destroys region.
-	 * @param suspect object player for method.
-	 * @param suspectName player name who's interacting with region.
-	 * @param action type of actions.
-	 * @param regionName region name.
-	 * @param x position of block.
-	 * @param y position of block.
-	 * @param z position of block.
-	 * @param world position of block.
+	 * @param admin Message for an admin who destroys a region.
+	 * @param suspect Object player for method.
+	 * @param suspectName Player name who interacting with a region.
+	 * @param action Get the actions.
+	 * @param regionName Region name.
+	 * @param x Position of block.
+	 * @param y Position of block.
+	 * @param z Position of block.
+	 * @param world Position of block.
 	 */
-	public void notifyIfActionInRegion(Player admin, Player suspect, String suspectName, RegionAction action, String regionName, double x, double y, double z, String world) {
-		if (this.isSenderListenerPermission(suspect, UtilPermissions.SPY_INSPECT_FOR_SUSPECT, null)
+	public void notifyIfActionInRegion(Player admin, Player suspectPlayer, String suspectName, RegionAction action, String regionName, double x, double y, double z, String world) {
+		if (this.isSenderListenerPermission(suspectPlayer, UtilPermissions.SPY_INSPECT_FOR_SUSPECT, null)
 				&& wgRegionProtect.getUtilConfig().getConfig().getSpyCommandNotifyAdmin()) {
 				admin.sendMessage(Message.Notify_sendAdminInfoIfActionInRegion.toString()
 						.replace("<player>", suspectName)
@@ -203,13 +202,12 @@ public class RSApi {
 
 	/**
 	 * Initializes all used NMS classes, constructors, fields and methods.
-	 * Returns {@code true} if everything went successfully and version is marked as compatible,
-	 * {@code false} if anything went wrong or version is not marked as compatible.
-	 * @return    {@code true} if server version is compatible, {@code false} if not
+	 * Returns {@code true} if everything went successfully and version marked as compatible,
+	 * {@code false} if anything went wrong or version not marked as compatible.
+	 * @return    {@code true} if server version compatible, {@code false} if not
 	 */
 	public boolean isVersionSupported(){
-		List<String> supportedVersions = Arrays.asList(
-				"v1_18_R1", "v1_18_R2");
+		List<String> supportedVersions = List.of("v1_19_R1");
 		String serverPackage = Bukkit.getServer().getClass().getPackage().getName().split("\\.")[3];
 		try {
 			long time = System.currentTimeMillis();
